# Network-Quality-Estimator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  setup_curl_linux.sh  setup_curl_macos.sh  setup_curl_windows.bat  vcpkg.json
.github/workflows/: ci.yml.bak  release.yml
android_example/: CMakeLists.txt  build_android.sh
android_example/java/com/nqe/: NetworkChangeNotifier.java  NqeManager.java
android_example/jni/: nqe_jni.cpp
docs/: ANDROID_BUILD.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_CN.md  CHROME_NQE_FEATURES.md  CHROME_NQE_FEATURES_CN.md  README.md  README_CN.md
include/nqe/: CachedNetworkQuality.h  EffectiveConnectionType.h  HttpRttSource.h  Logger.h  NetworkChangeNotifier.h  NetworkID.h  NetworkQualityObserver.h  NetworkQualityStore.h  Nqe.h  QuicH2PingSource.h  ReportGenerator.h  ThroughputAnalyzer.h
src/: CachedNetworkQuality.cpp  EffectiveConnectionType.cpp  NetworkChangeNotifier.cpp  NetworkID.cpp  NetworkQualityStore.cpp  Nqe.cpp  ThroughputAnalyzer.cpp
src/aggregators/: Aggregator.h  Combiner.h  WeightedMedian.h
test/: advanced_features_demo.cpp  complete_features_demo.cpp  continuous_http_monitor.cpp  ect_recomputation_test.cpp  extended_features_test.cpp  feature_test.cpp  http_rtt_example.cpp  libcurl_multi_nqe_example.cpp  network_change_test.cpp  network_quality_cache_test.cpp  ping_rtt_example.cpp  report_demo.cpp  throughput_analyzer_test.cpp  unit_test.cpp
